--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Quicksand:wght@300..700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
+
+* {
+  font-family: "Quicksand", serif;
+}
+/* @layer base {
   :root {
     --background: 0 0% 100%;
     --foreground: 0 0% 3.9%;
@@ -76,4 +81,4 @@
   body {
     @apply bg-background text-foreground;
   }
-}
+} */
